public/naser.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghasem
  namespace: mamad
  labels:
    app: ghasem
spec:
  clusterIP: None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: ghasem
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghasem
  namespace: mamad
  labels:
    app: ghasem
spec:
  replicas: 1 # Initial replicas, HPA will scale this
  selector:
    matchLabels:
      app: ghasem
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghasem
        name: ghasem
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/cloud-container-g2
                    operator: In
                    values:
                      - "true"
      tolerations:
        - effect: NoSchedule
          key: role
          operator: Equal
          value: cloud-container-g2
      containers:
        - name: ghasem
          image: wolfix1245/userwebsite:1.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
              ephemeral-storage: "300Mi"
            limits:
              cpu: "200m"
              memory: "400Mi"
              ephemeral-storage: "600Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghasem-ingress
  namespace: mamad
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ghasem-9ddcd5133c-mamad.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghasem
                port:
                  number: 80
