public/newyaml.yaml
apiVersion: v1
kind: Service
metadata:
  name: userwebsite-app
  namespace: mamad
  labels:
    app: userwebsite-app
spec:
  clusterIP: None
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: userwebsite-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userwebsite-app
  namespace: mamad
  labels:
    app: userwebsite-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userwebsite-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userwebsite-app
        name: userwebsite-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/cloud-container-g2
                    operator: In
                    values:
                      - "true"
      tolerations:
        - effect: NoSchedule
          key: role
          operator: Equal
          value: cloud-container-g2
      containers:
        - name: userwebsite-app
          image: wolfix1245/userwebsite:1.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "1000Mi"
              ephemeral-storage: "500Mi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
              ephemeral-storage: "500Mi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userwebsite-app-ingress
  namespace: mamad
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: userwebsite-app-9ddcd5133c-mamad.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userwebsite-app
                port:
                  number: 80
